fix css about overflow

--- a/groupware-frontend/src/styles/layouts/Layout.module.scss
+++ b/groupware-frontend/src/styles/layouts/Layout.module.scss
@@ -3,14 +3,15 @@
 .whole_layout {
   display: flex;
   flex-direction: row;
-  width: 98vw;
-  max-width: 98vw;
+  // width: 100%;
+  // max-width: 100vw;
   min-height: 100vh;
 }
 
 .right_contents {
   width: 100%;
   display: flex;
+  overflow-x: scroll;
   flex-direction: column;
   @media (min-width: 768px) {
     margin-left: max(94px, 4vw);
@@ -19,11 +20,18 @@
 
 .main {
   width: 100%;
+  // overflow-x: scroll;
+  background-color: #f3f6fb;
   display: flex;
   flex-direction: column;
   align-items: center;
+  // box-sizing: border-box;
   padding-left: 48px;
   padding-right: 48px;
+  // @media (min-width: 768px) {
+  //   padding-left: 200px;
+  //   padding-right: 200px;
+  // }
   @media (max-width: 768px) {
     //for header fixed position
     // padding-top: 110px;
@@ -33,23 +41,18 @@
 }
 
 .main_padding_with_tab {
-  width: 100%;
-  background-color: #f3f6fb;
   padding-top: 15px;
-  padding-left: 48px;
-  padding-right: 48px;
   @media (max-width: 768px) {
-    background-color: #f3f6fb;
     padding-top: 140px;
+    // padding-left: 0px;
+    // padding-right: 0px;
   }
 }
 .main_padding_no_tab {
   padding-top: 24px;
-  padding-right: 48px;
-  padding-right: 48px;
-  background-color: #f3f6fb;
   @media (max-width: 768px) {
-    background-color: #f3f6fb;
+    // padding-left: 0px;
+    // padding-right: 0px;
     padding-top: 8vh;
   }
 }
